--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -6,27 +6,32 @@
       <th>Created At</th>
       <th>author</th>
     </tr>
-    <tr *ngFor = "let data of getFullData" (click)="openModal(template,data.objectID)">
-      <td  >{{data.title}}</td>
-      <td>{{data.url}}</td>
-      <td>{{data.created_at}}</td>
-      <td>{{data.author}}</td>
+    <tr
+      *ngFor="let data of getFullData"
+      (click)="openModal(template, data.objectID)"
+    >
+      <td>{{ data.title }}</td>
+      <td>{{ data.url }}</td>
+      <td>{{ data.created_at }}</td>
+      <td>{{ data.author }}</td>
     </tr>
   </table>
 
   <ng-template #template>
     <div class="modal-header">
       <h4 class="modal-title pull-left">Modal</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <button
+        type="button"
+        class="close pull-right"
+        aria-label="Close"
+        (click)="modalRef.hide()"
+      >
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
       <!-- aaa -->
-     {{getFullData |json}}
+      {{getID |json}}
     </div>
-    </ng-template>
-
+  </ng-template>
 </div>
-
-
